// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SponsoredAd renders 3 ad items when narrowContent 1`] = `
"
<script type=\\"text/javascript\\" id=\\"dianomi_context_script\\" src=\\"https://www.dianomi.com/js/contextfeed.js\\"></script>
<div class=\\"dianomi_context\\" data-dianomi-context-id=\\"244\\"></div>
"
`;

exports[`SponsoredAd renders Dianomi script tag 1`] = `
"
<script type=\\"text/javascript\\" id=\\"dianomi_context_script\\" src=\\"https://www.dianomi.com/js/contextfeed.js\\"></script>
<div class=\\"dianomi_context\\" data-dianomi-context-id=\\"243\\"></div>
"
`;
